Sony-Systems-Project/Deploy _to_Prod/Kubernetes _deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sony-systems-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: sony-systems-project
